--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
 
     <string name="menu_home">Home</string>
     <string name="menu_timer">Pomodoro Timer</string>
+    <string name="menu_notes">Notes</string>
 </resources>
