--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="menu_home">Home</string>
     <string name="menu_timer">Pomodoro Timer</string>
     <string name="menu_notes">Notes</string>
+    <string name="menu_edit_notes">Edit Note</string>
 </resources>
