--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,6 @@
     <string name="menu_timer">Pomodoro Timer</string>
     <string name="menu_notes">Notes</string>
     <string name="menu_edit_notes">Edit Note</string>
+    <string name="menu_flashcards">Flash Cards</string>
+    <string name="menu_todo">Todo</string>
 </resources>
